--- a/src/main/resources/properties/common.properties
+++ b/src/main/resources/properties/common.properties
@@ -13,31 +13,31 @@
 #QC \ube44\ub514\uc624-\uc624\ub514\uc624 : 1013
 #QC \uc624\ub514\uc624-\uc624\ub514\uc624: 1014
 
-component.type=1008
-component.ip=127.0.0.1
+component.type=1040
+component.ip=100.100.1.201
 component.port=9000
 component.max.process.cnt=30
 
 #JOB \ud480
-component.job.exchange=enm.component.job
-connect.queue=enm.connect
-job.status.queue=enm.job.status
-qc.result.queue=enm.qc.result
-cataloger.result.queue=enm.cataloger.result
-marker.result.queue=enm.marker.result
+component.job.exchange=esjee.component.job
+connect.queue=esjee.connect
+job.status.queue=esjee.job.status
+qc.result.queue=esjee.qc.result
+cataloger.result.queue=esjee.cataloger.result
+marker.result.queue=esjee.marker.result
 
 #\ucef4\ud3ec\ub10c\ud2b8 \uc0c1\ud0dc \ubc0f \uc811\uc18d \uc815\ubcf4
-component.info.queue=enm.pool.info
-process.info.exchange=enm.process.info
-process.info.queue=enm.component.status.info
+component.info.queue=esjee.pool.info
+process.info.exchange=esjee.process.info
+process.info.queue=esjee.component.status.info
 
 #MQ\uc758 \uc811\uc18d \uc815\ubcf4
 #\uc2f1\uae00 ip:port / \uba40\ud2f0 ip:port,ip:port
-rabbitmq.server.ip=192.168.0.224:5672
-rabbitmq.server.id=sysadmin
-rabbitmq.server.pw=sysadmin
+rabbitmq.server.ip=localhost:5672
+rabbitmq.server.id=mam
+rabbitmq.server.pw=mam
 
-rabbitmq.server.host=172.16.128.152
+rabbitmq.server.host=192.168.0.33
 rabbitmq.server.port=5672
 
 component.home.path=/home/npsadmin/component/
