HCP 연동 작업 추가

--- a/src/main/resources/properties/common.properties
+++ b/src/main/resources/properties/common.properties
@@ -25,6 +25,7 @@ job.status.queue=esjee.job.status
 qc.result.queue=esjee.qc.result
 cataloger.result.queue=esjee.cataloger.result
 marker.result.queue=esjee.marker.result
+hcp.job.status.queue=esjee.hcp.job.status
 
 #\ucef4\ud3ec\ub10c\ud2b8 \uc0c1\ud0dc \ubc0f \uc811\uc18d \uc815\ubcf4
 component.info.queue=esjee.pool.info
@@ -52,3 +53,9 @@ diva.password=sysadmin
 diva.userinfo=test
 diva.sitename=CJNPS
 diva.response.timeout=60000
+
+# HCP Server
+hcp.host=video.mam.hcp.esjee.co.kr
+hcp.user=admin
+hcp.password=Dptmwp2!
+hcp.storage.root=/storage
