--- a/src/main/resources/properties/common.properties
+++ b/src/main/resources/properties/common.properties
@@ -13,30 +13,30 @@
 #QC \ube44\ub514\uc624-\uc624\ub514\uc624 : 1013
 #QC \uc624\ub514\uc624-\uc624\ub514\uc624: 1014
 
-component.type=1040
-component.ip=100.100.1.201
-component.port=9000
-component.max.process.cnt=30
+component.type=1008
+component.ip=100.100.1.196
+component.port=9005
+component.max.process.cnt=1
 
 #JOB \ud480
-component.job.exchange=esjee.component.job
-connect.queue=esjee.connect
-job.status.queue=esjee.job.status
-qc.result.queue=esjee.qc.result
-cataloger.result.queue=esjee.cataloger.result
-marker.result.queue=esjee.marker.result
-hcp.job.status.queue=esjee.hcp.job.status
+component.job.exchange=gugak.component.job
+connect.queue=gugak.connect
+job.status.queue=gugak.job.status
+qc.result.queue=gugak.qc.result
+cataloger.result.queue=gugak.cataloger.result
+marker.result.queue=gugak.marker.result
+hcp.job.status.queue=gugak.hcp.job.status
 
 #\ucef4\ud3ec\ub10c\ud2b8 \uc0c1\ud0dc \ubc0f \uc811\uc18d \uc815\ubcf4
-component.info.queue=esjee.pool.info
-process.info.exchange=esjee.process.info
-process.info.queue=esjee.component.status.info
+component.info.queue=gugak.pool.info
+process.info.exchange=gugak.process.info
+process.info.queue=gugak.component.status.info
 
 #MQ\uc758 \uc811\uc18d \uc815\ubcf4
 #\uc2f1\uae00 ip:port / \uba40\ud2f0 ip:port,ip:port
 rabbitmq.server.ip=localhost:5672
-rabbitmq.server.id=mam
-rabbitmq.server.pw=mam
+rabbitmq.server.id=sysadmin
+rabbitmq.server.pw=sysadmin
 
 component.home.path=/home/npsadmin/component/
 component.transcoder.path=transcoder/
