인젝션 오류 추가

--- a/src/main/resources/properties/common.properties
+++ b/src/main/resources/properties/common.properties
@@ -59,3 +59,9 @@ hcp.host=video.mam.hcp.esjee.co.kr
 hcp.user=admin
 hcp.password=Dptmwp2!
 hcp.storage.root=/storage
+
+# archive
+archive.username=gugak
+archive.password=gugak99!
+archive.port=443
+archive.hostname=localhost
